# hdns

./: .dockerignore  .gitignore  ChangeLog.md  Dockerfile  Makefile  README.md  hdns.cabal  package.yaml  stack.yaml
app/: Main.hs
docs/: ROADMAP.md
examples/: records.zone
src/: HDNS.hs
src/Network/HDNS/: Config.hs  Handler.hs  Server.hs
test/: Spec.hs
